# LoRaDepo

./: .gitignore  README.md
LoRaDB/: .dockerignore  .env.example  API_TOKEN_GUIDE.md  CLAUDE.md  Cargo.toml  DELETE_DEVICE_API.md  DEPLOYMENT.md  Dockerfile  PITCH.md  QUERY_API_GUIDE.md  README.md  deploy.sh  docker-compose.yml  loradb.sh  update.sh
LoRaDB-UI/: .env.example  LoRaDB-README.md  README.md  REMOTE_SETUP.md  SECURITY_AUDIT.md  docker-compose.yml
LoRaDB-UI/backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
LoRaDB-UI/backend/src/: index.ts
LoRaDB-UI/backend/src/config/: env.ts
LoRaDB-UI/backend/src/middleware/: cors.ts  errorHandler.ts  rateLimiter.ts  security.ts  validator.ts
LoRaDB-UI/backend/src/routes/: auth.ts  proxy.ts
LoRaDB-UI/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
LoRaDB-UI/frontend/src/: App.tsx  styles.css
LoRaDB-UI/frontend/src/api/: client.ts  endpoints.ts
LoRaDB-UI/frontend/src/components/Analytics/: AirtimeChart.tsx  DeviceKPI.tsx  EnergyChart.tsx  FrequencyChart.tsx  KPISummaryCards.tsx  SignalQualityChart.tsx  SpreadingFactorChart.tsx  TimeRangeSelector.tsx
LoRaDB-UI/frontend/src/components/Auth/: Login.tsx
LoRaDB-UI/frontend/src/components/Common/: ErrorBoundary.tsx  Loading.tsx
LoRaDB-UI/frontend/src/components/Devices/: DeviceList.tsx
LoRaDB-UI/frontend/src/components/Layout/: Dashboard.tsx
LoRaDB-UI/frontend/src/components/Query/: QueryInterface.tsx
LoRaDB-UI/frontend/src/components/Retention/: RetentionPolicies.tsx
LoRaDB-UI/frontend/src/components/Settings/: Settings.tsx
LoRaDB-UI/frontend/src/components/Tokens/: TokenManagement.tsx
LoRaDB-UI/frontend/src/context/: AuthContext.tsx  SettingsContext.tsx
LoRaDB-UI/frontend/src/types/: api.ts
LoRaDB-UI/frontend/src/utils/: dateFormatter.ts  kpiCalculations.ts  queryBuilder.ts  queryParser.ts  sanitizer.ts
LoRaDB-manager/: Makefile  QUICKSTART.md  README.md  install-alias.sh  pyproject.toml  requirements.txt  run.sh  test_footer.py  test_navigation.py
LoRaDB-manager/loradb_manager/: app.css  app.py  config.py  main.py
LoRaDB-manager/loradb_manager/api/: __init__.py  loradb_client.py  models.py
LoRaDB-manager/loradb_manager/core/: docker_manager.py  instance.py  instance_manager.py  port_allocator.py  template.py
LoRaDB-manager/loradb_manager/ui/screens/: config_editor.py  create_wizard.py  logs_viewer.py  main_screen.py  token_create_form.py  token_manager_screen.py
LoRaDB-manager/loradb_manager/utils/: crypto.py
LoRaDB/benches/: query_bench.rs  storage_bench.rs
LoRaDB/docs/: HTTP_INGESTION.md
LoRaDB/src/: config.rs  error.rs  lib.rs  main.rs
LoRaDB/src/api/: handlers.rs  http.rs  middleware.rs  mod.rs
LoRaDB/src/engine/: compaction.rs  iterator.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
LoRaDB/src/ingest/: chirpstack.rs  common.rs  mod.rs  mqtt.rs  ttn.rs
LoRaDB/src/model/: decoded.rs  device.rs  frames.rs  gateway.rs  lorawan.rs  mod.rs
LoRaDB/src/query/: dsl.rs  executor.rs  mod.rs  parser.rs  planner.rs
LoRaDB/src/security/: api_token.rs  encryption.rs  jwt.rs  mod.rs  tls.rs
LoRaDB/src/storage/: mod.rs  retention_manager.rs
LoRaDB/src/util/: bloom.rs  clock.rs  compression.rs  mod.rs  varint.rs
