[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loradb-manager"
version = "0.1.0"
description = "Textual TUI application for managing multiple LoRaDB instances"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "LoRaDB Manager Team"}
]
dependencies = [
    "textual>=0.47.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
loradb-manager = "loradb_manager.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loradb_manager*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
