[package]
name = "loradb"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["LoRaDB Team"]
description = "Secure, high-performance time-series database for LoRaWAN devices"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# MQTT client
rumqttc = { version = "0.24", features = ["use-rustls"] }

# HTTP server
axum = { version = "0.6", features = ["macros"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.4", features = ["trace", "cors", "compression-gzip"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
hyper = { version = "0.14", features = ["full"] }

# TLS
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Authentication
jsonwebtoken = "9.2"

# Cryptography
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
base64 = "0.22"
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Data structures
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
dashmap = "5.5"

# Compression
lz4 = "1.24"

# CRC for checksums
crc32fast = "1.3"

# Configuration
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v4"] }

# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[features]
default = ["encryption-aes"]
encryption-aes = ["dep:aes-gcm"]
encryption-chacha = ["dep:chacha20poly1305"]
cli = ["dep:clap"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bin]]
name = "generate-token"
path = "src/bin/generate-token.rs"

[[bin]]
name = "generate-api-token"
path = "src/bin/generate-api-token.rs"
